OLMIS-997: Change name of request param
